--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -866,6 +866,9 @@
 				  <property name="has_frame">True</property>
 				  <property name="invisible_char">•</property>
 				  <property name="activates_default">False</property>
+				  <accessibility>
+				    <atkproperty name="AtkObject::accessible_name" translatable="yes">Net Name</atkproperty>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="left_attach">1</property>
@@ -887,6 +890,9 @@
 				  <property name="has_frame">True</property>
 				  <property name="invisible_char">•</property>
 				  <property name="activates_default">False</property>
+				  <accessibility>
+				    <atkproperty name="AtkObject::accessible_name" translatable="yes">Net UUID</atkproperty>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="left_attach">1</property>
@@ -908,6 +914,9 @@
 				  <property name="has_frame">True</property>
 				  <property name="invisible_char">•</property>
 				  <property name="activates_default">False</property>
+				  <accessibility>
+				    <atkproperty name="AtkObject::accessible_name" translatable="yes">Net Device</atkproperty>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="left_attach">1</property>
@@ -1244,6 +1253,9 @@
 				  <property name="has_frame">True</property>
 				  <property name="invisible_char">•</property>
 				  <property name="activates_default">False</property>
+				  <accessibility>
+				    <atkproperty name="AtkObject::accessible_name" translatable="yes">Network Range</atkproperty>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="left_attach">1</property>
@@ -1265,6 +1277,9 @@
 				  <property name="has_frame">True</property>
 				  <property name="invisible_char">•</property>
 				  <property name="activates_default">False</property>
+				  <accessibility>
+				    <atkproperty name="AtkObject::accessible_name" translatable="yes">Start Address</atkproperty>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="left_attach">1</property>
@@ -1286,6 +1301,9 @@
 				  <property name="has_frame">True</property>
 				  <property name="invisible_char">•</property>
 				  <property name="activates_default">False</property>
+				  <accessibility>
+				    <atkproperty name="AtkObject::accessible_name" translatable="yes">End Address</atkproperty>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="left_attach">1</property>
@@ -1688,6 +1706,9 @@
 				  <property name="has_frame">True</property>
 				  <property name="invisible_char">•</property>
 				  <property name="activates_default">False</property>
+				  <accessibility>
+				    <atkproperty name="AtkObject::accessible_name" translatable="yes">Storage Location</atkproperty>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="left_attach">1</property>
@@ -1737,6 +1758,9 @@
 				  <property name="has_frame">True</property>
 				  <property name="invisible_char">•</property>
 				  <property name="activates_default">False</property>
+				  <accessibility>
+				    <atkproperty name="AtkObject::accessible_name" translatable="yes">Storage Name</atkproperty>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="left_attach">1</property>
