--- a/src/vmm-modify-file-storage.glade
+++ b/src/vmm-modify-file-storage.glade
@@ -215,6 +215,9 @@
 		      <property name="snap_to_ticks">False</property>
 		      <property name="wrap">False</property>
 		      <property name="adjustment">1 0 100 1 10 10</property>
+		      <accessibility>
+			<atkproperty name="AtkObject::accessible_name" translatable="yes">Storage Size Select</atkproperty>
+		      </accessibility>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
@@ -231,6 +234,9 @@ GB
 TB</property>
 		      <property name="add_tearoffs">False</property>
 		      <property name="focus_on_click">True</property>
+		      <accessibility>
+			<atkproperty name="AtkObject::accessible_name" translatable="yes">Size Type</atkproperty>
+		      </accessibility>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
