Hook up active/inactive widget and make connection display resource graphs.

--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -415,6 +415,8 @@ Inactive virtual machines</property>
 	      <property name="hover_expand">False</property>
 	      <signal name="row_activated" handler="on_vm_list_row_activated" last_modification_time="Mon, 03 Apr 2006 13:43:20 GMT"/>
 	      <signal name="button_press_event" handler="on_vm_list_button_press_event" last_modification_time="Mon, 03 Apr 2006 14:14:43 GMT"/>
+	      <signal name="row_expanded" handler="on_vm_list_row_expanded" last_modification_time="Tue, 14 Aug 2007 15:19:41 GMT"/>
+	      <signal name="row_collapsed" handler="on_vm_list_row_collapsed" last_modification_time="Tue, 14 Aug 2007 15:19:50 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
